<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="example.tesla.myapplication.MainActivity">

    <item
        android:id="@+id/overflow"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_overflow"
        app:showAsAction="always"
        android:title="@string/overFlowMenu">
        <menu>

            <item
                android:id="@+id/action_settings"
                android:orderInCategory="2"
                app:showAsAction="never"
                android:title="@string/action_settings"/>
            <item
                android:id="@+id/display"
                android:orderInCategory="3"
                app:showAsAction="never"
                android:title="@string/display"/>

            <item
                android:id="@+id/about1"
                android:orderInCategory="4"
                app:showAsAction="never"
                android:title="@string/about1"/>

            <item
                android:id="@+id/about"
                android:orderInCategory="5"
                app:showAsAction="never"
                android:title="@string/about"/>

        </menu>
    </item>

</menu>
