<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/scrollView1"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#ffffff">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headline"
        android:textSize="20sp"
        android:textColor="#333333"
        android:id="@+id/textView9"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/editText"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_below="@id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/editText2"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/editText3"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/editText4"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/editText6"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_below="@+id/textView4" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/editText7"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editText6"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/editText5"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editText7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unitQ"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/textView"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unitU"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/textView2"
        android:layout_toRightOf="@+id/editText2"
        android:layout_toEndOf="@id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unitSY"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/textView3"
        android:paddingBottom="5dp"
        android:layout_toRightOf="@+id/editText3"
        android:layout_toEndOf="@id/editText3"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/unitSZ"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/textView4"
        android:paddingBottom="5dp"
        android:layout_toRightOf="@+id/editText4"
        android:layout_toEndOf="@id/editText4"
        android:layout_alignBottom="@+id/editText4"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unitH"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/textView5"
        android:layout_toRightOf="@+id/editText6"
        android:layout_toEndOf="@id/editText6"
        android:layout_above="@+id/editText7"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unitZ"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/textView6"
        android:layout_toRightOf="@+id/editText7"
        android:layout_toEndOf="@id/editText7"
        android:layout_above="@+id/editText5"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unitY"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/textView7"
        android:layout_toRightOf="@+id/editText5"
        android:layout_toEndOf="@id/editText5"
        android:layout_alignBottom="@+id/editText5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="16sp"
        android:textColor="#333333"
        android:id="@+id/textView8"
        android:layout_below="@+id/imageCalculator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/imageCalculator"
        android:src="@drawable/calculator"
        android:contentDescription="@string/iconCalculator"
        android:onClick="calculateGauss"
        android:layout_below="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unitResult"
        android:textSize="16sp"
        android:textColor="#333333"
        android:id="@+id/textView10"
        android:paddingTop="5dip"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8" />


</RelativeLayout>

</ScrollView>

