<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gaussian.plume.calc.SecondActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#ffffff"
        tools:context="gaussian.plume.calc.SecondActivity">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="#333333"
            android:text="@string/aboutAppHeadline" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="360dp"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:textSize="18sp"
            android:textColor="#333333"
            android:text="@string/textAboutApp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:layout_marginTop="0dp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/icon"
            android:src="@drawable/logonew" />


    </RelativeLayout>
</ScrollView>


